--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@ant-design/icons-vue": "^6.1.0",
+    "animate.css": "^4.1.1",
     "ant-design-vue": "^3.2.15",
     "axios": "^1.3.4",
     "core-js": "^3.8.3",
