--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@ant-design/icons-vue": "^6.1.0",
     "@dataview/datav-vue3": "^0.0.0-test.1672506674342",
     "@jiaminghi/data-view": "^2.10.0",
+    "@kjgl77/datav-vue3": "^1.5.0",
     "animate.css": "^4.1.1",
     "ant-design-vue": "^3.2.15",
     "axios": "^1.3.4",
