--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.3.4",
     "core-js": "^3.8.3",
     "echarts": "^5.4.1",
+    "element-plus": "^2.3.4",
     "v-charts-v2": "^2.0.9",
     "vue": "^3.2.13",
     "vue-router": "^4.1.6"
