--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "core-js": "^3.8.3",
     "echarts": "^5.4.1",
     "element-plus": "^2.3.4",
+    "jsencrypt": "^3.3.2",
+    "md5": "^2.3.0",
     "v-charts-v2": "^2.0.9",
     "vue": "^3.2.13",
     "vue-router": "^4.1.6"
